# serializer version: 1
# name: test_switch_setup[switch.001122334455_air_exhaust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.001122334455_air_exhaust',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air exhaust',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air exhaust',
    'platform': 'flow_it',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flow_out',
    'unique_id': '001122334455_flow_out',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[switch.001122334455_air_exhaust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '001122334455 Air exhaust',
    }),
    'context': <ANY>,
    'entity_id': 'switch.001122334455_air_exhaust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_setup[switch.001122334455_air_intake-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.001122334455_air_intake',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air intake',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air intake',
    'platform': 'flow_it',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flow_in',
    'unique_id': '001122334455_flow_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[switch.001122334455_air_intake-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '001122334455 Air intake',
    }),
    'context': <ANY>,
    'entity_id': 'switch.001122334455_air_intake',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
